--- a/.gitignore
+++ b/.gitignore
@@ -1,87 +1,36 @@
+# Java
 *.class
-*.xml
-*.iml
-*.exe
-*.o
 *.kotlin_module
+META-INF/
 out/
+
+# IDEA
 .idea/
-*Main.java
-*Test.java
+*.iml
 
-tmp.md
-temp.md
-*test*
-*temp*
-*tmp*
+# Eclipse
+.classpath
+.project
+.settings/
+.springBeans
+bin/
 
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-*.manifest
-*.spec
-pip-log.txt
-pip-delete-this-directory.txt
+# Package Files
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-*.mo
-*.pot
-*.log
-local_settings.py
-db.sqlite3
-instance/
-.webassets-cache
-.scrapy
-docs/_build/
-target/
-.ipynb_checkpoints
-profile_default/
-ipython_config.py
-.python-version
-celerybeat-schedule
-*.sage.py
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-.spyderproject
-.spyproject
-.ropeproject
-/site
-.mypy_cache/
-.dmypy.json
-dmypy.json
-.pyre/
+# Temp
+Temp*
+temp*
+Tmp*
+tmp*
+Test*
+test*
+
+# Others
+*.o
